--- a/clusters/main/kubernetes/flux-system/flux/clustersettings.secret.yaml
+++ b/clusters/main/kubernetes/flux-system/flux/clustersettings.secret.yaml
@@ -4,43 +4,43 @@ metadata:
     name: cluster-config
     namespace: flux-system
 data:
-    #ENC[AES256_GCM,data:UUH+NUhIM4pV4OufqG4uk0+v2cTlIFMLz0/zlZIRHX6bAujd06VMvxe0QRSmLSwCG/Dg+xn9+nkYyZaMlZSStkg=,iv:v4pPnYpq8VHEyCKi9kwAWYUIfEq8f5sOoTwFFQXILDo=,tag:k7Ei746UABm4qGathSsEqw==,type:comment]
-    #ENC[AES256_GCM,data:nV2njOeZHvfkjRiqY8wjkt0E3kHPY+Rbx1EzJxEcpvqLkO+Eiv5A41+szGA=,iv:ARTXGU3p1cn5YSd9mOouV7o/LS++hg+ClIil3mpNs8Y=,tag:KvNVbbpb74rrPZkfkgqDXA==,type:comment]
-    VIP: ENC[AES256_GCM,data:1KDB1YkRubpW5eTovg==,iv:ukt4rPlAedqXqoKd9ppg+rO4IOS6kOoVyoaDRlfl1vU=,tag:+dn/A3NP7byg2v/ZpecTWw==,type:str]
-    #ENC[AES256_GCM,data:n4HeT5FwFqoiNvPWoLzmSIXlBNr9bnk67eBg,iv:oDM0o2EoZ8J7SI16Ap2kTFnEmcpMHg9aqiCbj9fFB/s=,tag:10lnyRm3HnfeaQN3PHtY/Q==,type:comment]
-    #ENC[AES256_GCM,data:1fYiaZ/jtyOlhlD3GMhD3nt7joFFPF0UxL58kB0wfaoTAKJZ3SLZkiR35Yxr20CYUwU2bO+PhNTC42fipJ24mupT5lF7W+Q1h5xX2wo3mXjmEejtKSdsrGA=,iv:e8RbMRarlqzE9CSLs/xB78xuw8Yqtmo13Ta/XHUGAbs=,tag:bCN1iuf1QGmyRiZAne3rBQ==,type:comment]
-    MASTER1IP: ENC[AES256_GCM,data:fRqawGamddR3rPZCOhc=,iv:qJ+JB8/jaW48TZnR4ORofqOti9MuHXXRFvdOI47p76g=,tag:6iyMPy78dP+AYRrE35aRkA==,type:str]
-    #ENC[AES256_GCM,data:DcZqn7/RudQARu+CKUnynRE7e6lcYNWhiAIjgN0waQuRVA==,iv:Dd4iWgrNMgvYh2lO4j83YUbvcX+tfiljdEYLk0INEck=,tag:4ZP2kqC1t7lFShiefsXMmA==,type:comment]
-    GATEWAY: ENC[AES256_GCM,data:iKw0GAdbfNsQcrPsUw==,iv:2TJArRL7La3MoS23IipuuZ9EFBhamY2fi6nQLntvlS8=,tag:qgoHG5RxSykGSLt683jfPw==,type:str]
-    #ENC[AES256_GCM,data:UUPH3R7JrfIL8+HnsZryIcVGKpS6ZusNKoxSI8cl3NzBojA7RnW3l8KDpuyG6+s=,iv:SNWprfj6c7zES8gAp/I7F4aQwd35GmZuy9lNDoRAA8Y=,tag:41BJf7MUMSOD1jFSQxnpsg==,type:comment]
-    METALLB_RANGE: ENC[AES256_GCM,data:f5IA5UfSK5cnX8DhncghA4qBOYnACHQIgGG45vsJgw==,iv:GPhomZTrUBJraJ5zjxQXSe+DSZoxtLuS6TFjFbaV6Z4=,tag:5+VaSDlKATIw7q0PiVbreQ==,type:str]
-    #ENC[AES256_GCM,data:Na1x5gnykRxKE1t1NEnRuv4iRG1FYJAfeclXxIYXbFTYvbahpVodoefu/Jb71gWIJe7cpOrD0YynWHvqXiQZCK5XOJMRwSV1Mex9WbpCZaMkcg==,iv:vEaA8CKb0zpfCXAP4lveSEYkwX/Qwq+VXgsZLNgrKe4=,tag:PRtk0rSmX/d5TSOor88a0Q==,type:comment]
-    TRAEFIK_IP: ENC[AES256_GCM,data:zIPa5Eb5wlGUPCaxFnJL,iv:P4jqnnyeEVs27rqtC2wWoCLlKBBPDtg1LpHK17mJDv4=,tag:RDoYawLV1T5fm7JLZxNv5g==,type:str]
-    #ENC[AES256_GCM,data:e+9bKdPQJn/GgZcHZYEmytGKyvZsCQdhvPiyKFwdo6Tw,iv:C0fJpK+M1xjvBZ2FVZs36UsYP9U/6vH/Eyf4EGxMG9E=,tag:6wgWgkKmwJ4lu9JRkZNQIQ==,type:comment]
-    BLOCKY_IP: ENC[AES256_GCM,data:+7uoLVheaceRt/gZl2aB,iv:/1VK6yp+e0SqbYRVDKq73/wToBTBPITMoh+f8nGNubo=,tag:8cy5Jrq/2wiEpV1Z1Hj2Kw==,type:str]
-    #ENC[AES256_GCM,data:bT+KJpe4tGUsXSMTUotfoAsBYOUgJfNs5dPVUzJe5IkYUEpfb/gcgCm1KX+kMETMgVXEyfWaPpSFwL/UVzrQ9QjyNsNbt4apre8Hpy9oo0U=,iv:/0jimq7jvEKBZPJ94IyRb6jetLgk5imaU1lUufWGclM=,tag:gW9DcZSWHXbLfHh81cAE+A==,type:comment]
-    DASHBOARD_IP: ENC[AES256_GCM,data:li5Av4mbyAjCWf9q7hRd,iv:/Qt/TuZuphrybx1ZMa65SJAKT1owvgYM/43Ndjzj1UM=,tag:WlC91AhGX9+H8bOFXst7yQ==,type:str]
-    #ENC[AES256_GCM,data:tcDs8mK1Qiry2KhSEB9XASvfH7GJzIUPeSAZH/PWLroFKr6GN86eCGoE5+2uzBIJZolUksEYzboDeFLx8sGztjDKsJCWbtsIu2K0meN6oJb5JVpfQ40r,iv:oXxI6ai7N+rcFqF6bhiBl7k9fghbqcqP2539imI1cKE=,tag:KtJRUVyEkoGWXESiHZ63FA==,type:comment]
-    #ENC[AES256_GCM,data:JypJsXUltL47/Jzl7vbvgiw5AE4dO0M0JcwiHCYvNFB7huyXVtbueoCDYSzleXGkGCVoxYJYbL3p8C863Hhq1qF+P3a8hX3guNmkahTgrNZwSduCQq/qZbO1MTZJvMKpdxtshtr0fwsrOh/rjWp3YmeKusx5SAn4Gc3eIA==,iv:WlXxkIH05PqAcCLcDxwIwqOfOHJkHoLV1p0TrkSvCzo=,tag:Kq4BDdwGIVSRSETpjoNL5A==,type:comment]
-    #ENC[AES256_GCM,data:5czrFqtJ3lCsS4Q0t4LtD5sINKorgthLnrZObNIwJ9+kUNnPlPUGsRybkXj17/znmAZs4opGNC7UF8gMjaVeQknacm/Eipl8m5Ec8WgUtG8=,iv:0z/7VCnvWWmdQYH9uNCkHxR6mfFSSg5LePsNdMZabhI=,tag:d4UZGXKbduyIWQNVuO7IVw==,type:comment]
-    #ENC[AES256_GCM,data:z6kj4ASHdkVauu1jQYxkYh1DSaUajnO0Qp2PQ92nkicPC47NV2wy97vwgMC9Kbdp2sM+UTlo,iv:46ThU2u90nRMBaNvfgbiPa9bPE73/txfkX/Wscq7VSw=,tag:IB6a5w8ZKx4T1a1y5ppe5Q==,type:comment]
-    DDNS_URL: ENC[AES256_GCM,data:TSA8F7SLXRbOt29Vfoo=,iv:FS//nzjGyv/Idrh7R7aHOB9P7G0GXqnY+YTyp26Dhq8=,tag:G4vcZys+OFLCzzCDNJ9Ibw==,type:str]
-    DOMAIN_0: ENC[AES256_GCM,data:uf04K25FkA0+tv2A,iv:PiJxShGSnAuJNOEV50OaXuVsAn8Yq5sbw8S2Bm83Qlk=,tag:1OUSdDenNahx6JjC31qNeA==,type:str]
-    DOMAIN_0_EMAIL: ENC[AES256_GCM,data:3bHHWGxHmgyuCJjAFCqKddE=,iv:uH71Tloq4CMe2k2ePjTcPnmvWJa6J5LHrzAlcdx2BKg=,tag:VICIzNtvWYpA6I1BbW/Png==,type:str]
-    DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:bSXFfJyV6FD5EzSR/71GsJ6zLaiaUsoBgsq/uUjgFM3OBq0ENcserA==,iv:KyjqfJviuBBtj0xgjJXoHySLsncgrx3tfeyeV8g5Gxo=,tag:YQzbpuiaXAZSNPpAO4VfSg==,type:str]
-    DOMAIN_0_CLOUDFLARE_API_KEY: ENC[AES256_GCM,data:mbo3B5RU4UNQW2XymnZg2PCksEIviFix5MVTOInZ4vu7vFvgCA==,iv:GASfecKhNIJ6p4TiI3DNHmvv6a6jeh7cz42LU2LxVNM=,tag:PzlL5lQI2Xhi5CNKXnDBfg==,type:str]
-    #ENC[AES256_GCM,data:/B4URVK0mv8jJWEMzlzULHJFAM36qxgfir7Uu3GYnCil67vMpfu69FayHO0RBSn+0K1qq7DzYMQ=,iv:b11X4uiSvBCi0FIkcsKsNPSIdAXl4RNXt7OhMVBy0m4=,tag:ce0XIuk1Loe0XFqwpvHp5A==,type:comment]
-    #ENC[AES256_GCM,data:/457VyhAbv7tiEzE1ZgvcJcjVv16FLPo2A==,iv:ESU55Qp7pKhfcFzDf1Eta3H9b2O+iUiEecdCniUToOI=,tag:ln9kuuypTrxGy1i32uHfxw==,type:comment]
-    #ENC[AES256_GCM,data:zdQXnannlU0haYq3PuPg6f5sEWEMULvS9FO1GX2mQhLagwIMHw5GE/o4KErHxIwvSg6rogTTF21G/DJyyNBytG5f6kRq4rEETENGTSE=,iv:IhNih31MakyqYbme4mkqGwBH0KHiiw+h5htgSc48kB8=,tag:CBeA8mjmIKkHEgyGitAgwQ==,type:comment]
-    GITHUB_REPOSITORY: ENC[AES256_GCM,data:F7PRxCOk+mzH5SPXPGY6ArwsCQRHKcNrqzlTxYGrvdZnGSCtaAHdtBrpftabUrOa,iv:C5nUYk+xNchsmSxAstuZ8YRSEsf7T5slr/98/yyHYIg=,tag:dmil7wBcmAmSrpc9WDa48A==,type:str]
-    #ENC[AES256_GCM,data:PkJTCKGfE+Cz9PFkutfOm5R8yLQyLJp59ZLyQGNyMmQAUVpzjkrlnqCNjipT6CCfRvTyQ66EWLwQ7k4meXluwQnoNnqxfY8=,iv:eXvcSRPx4P8NSDtew4rjrWlDKuUOZSIDfywrRLmI0YA=,tag:+P8Zj8kmVL1Y7knx/Adv8A==,type:comment]
-    #ENC[AES256_GCM,data:Ss8M4y+QHsayQ2Ur2WX17K6tOr0oorv3U/Yb0Y46KyqvNjnHKHPXmAmop+q1m4c/SbTwfb8/,iv:LRUnMe+KjFFdCle7IHqN8q6VwRpbJFxHT1x1n8tBAHQ=,tag:CM5Bt4MNg7JnqFqGujFJlA==,type:comment]
-    DOCKERHUB_USER: ENC[AES256_GCM,data:Jh+J2oNl7g==,iv:FZ6+voV4uRiZmpMaphrv6ONUCdwhQOz/SaRTXRqgqYw=,tag:gmlplJOg3zgeXO2Ksi8ilg==,type:str]
-    DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:7+rPyMsJf+iLx4TjSB2BKdpeBCE=,iv:agn1297NseqgJvDeqy4WpEo1NtRqPvCobCSF7mtURco=,tag:dDzoSOE8PXQBcbAEAGmzZw==,type:str]
-    #ENC[AES256_GCM,data:jcUNykrEHVwPQV7bo+E=,iv:SK11FExYcVNoU9WU70SKzXhdTEu8vvi+fiGoInaJ6qc=,tag:rMPlYBJAlu+/5Ft4WWTf4w==,type:comment]
-    PODNET: ENC[AES256_GCM,data:JoD1YqvALEzwMaoTAQ==,iv:9Zws91p54pvXg80961S2n1UCvqM5WtiUUonLv99FLOg=,tag:KTWgpZmM5qwC8b36Ej0Dhw==,type:str]
-    SVCNET: ENC[AES256_GCM,data:lRVyjtYOrhVdEBcRpQ==,iv:ISGhPWRfFYmItljw2JvGVaCCQ/jqD/wu6k1YtzozjOY=,tag:EDkm1phQi/YerFLIPagpBQ==,type:str]
-    CLUSTERNAME: ENC[AES256_GCM,data:7Vj2aw==,iv:pZinYYuiWMoFBuDmTNbcHsr0mxX+8WFUJcoS0yBeLy8=,tag:GlTDOU1Z1AUr1Ct8f9DSJA==,type:str]
+    #ENC[AES256_GCM,data:N9OSOxRCPipxa/IULupvBasB2imqaxUtv/QFdqkaElWVLF+hz5/pkVVMmvuGnrTPTqh8UHqgdpg1w5+LACL6dII=,iv:r8u9J60xGvWGSSs+ojxnYv5sWOXI4dGgPKsOjSP4/z0=,tag:guKKkjWAJm/Am+mqrGuzZA==,type:comment]
+    #ENC[AES256_GCM,data:h+Sh7yh5jMBPJZk3adp/j0AXL1Exs4wahSAvjduQvPAl6vdmASGg5byy47k=,iv:LgR3vpsQVsVEaN+wBF4aXg8mkz8J5TzVnkxAoql0KXQ=,tag:xtHxWBM8bzj0F8SdJR6GWw==,type:comment]
+    VIP: ENC[AES256_GCM,data://BWO/Hg5FMeeSmHMQ==,iv:s/F2sB4ZE+0ltWHTuZ7PSmKFkgtJ/uE1g8j12MsyHPs=,tag:+mQQIWBT8duOKbg7Bs9Kag==,type:str]
+    #ENC[AES256_GCM,data:9VhUoqdBWltO+R+8XSJAM07+wJHDFMTRNAfI,iv:FzjB6sXDx9QeWQODH6Y+Aie0J8WpVgw2iBNlJtihF1Y=,tag:W3+RCTgRi9ZEjCDofO6oxA==,type:comment]
+    #ENC[AES256_GCM,data:LjjlCaADJePzDpo5U1r9Ve6OtR5b+abp79zT2XQU1AKTI2mzZLOBJqepkY04kHJnRSWTW4T7ZKwt+2phAoKJmcfTiEhsBMTvgz9KP1kIIzscUQKMW35xhYY=,iv:jiL8ZicjOU8oYWrs4wUkOsyfQ/P/OiFE7rrJC0XNqiw=,tag:CA6AKjZG/LXVB3k6NprsCg==,type:comment]
+    MASTER1IP: ENC[AES256_GCM,data:8hlDBE/zNDOXijKFS2Y=,iv:o1EqoPw7glJ8lAmLs+UTzS7pbkmZEDfot0RK9Q45dEM=,tag:IKLvi/vkbgoNNkx97nrtMw==,type:str]
+    #ENC[AES256_GCM,data:I5fxETdgUfIp8Jibw1KwaKqJj/pqwuNvTyXSQ9mYpizlxg==,iv:KroZv2KatwdLmB8mMuEf2Cz0XJsejM2cGo8ggvmWn5k=,tag:z2WfYjKy/pnFQUD7TgIWZQ==,type:comment]
+    GATEWAY: ENC[AES256_GCM,data:aJ44CKydAD/3TsFdqQ==,iv:ua2hbY9AiiKe/NmwkJOWjWGFyhaFUkPoHtR+JFtmaKo=,tag:xHOk6jR1ccYeuXuuksJZPQ==,type:str]
+    #ENC[AES256_GCM,data:DZIbWg81yGeCaC0erTGEdp5Cyf2mLMRVZusqG1089X8LN2nw4nZlJ4KJ4Bo1Uu0=,iv:DuLCOv80gYi0OfUCJHZ6soLd47KpDNYKbmnA2VLmumQ=,tag:b8fKDHQKQdwS1MstUTrtoQ==,type:comment]
+    METALLB_RANGE: ENC[AES256_GCM,data:YfxnRPtnBSH/kRrfWPxWNAyEw8ZxA81K9HoTTI8r2Q==,iv:pEOoNv8x486/e0r4lRVMje87v4riv1JrQTY/GHPa/pY=,tag:zIIPgRL1mckWbi21lN81Lg==,type:str]
+    #ENC[AES256_GCM,data:36RqoZB6xRoqQehaQhpnctlvTyrIPeBT93Nzen6wTqG+zuGHbwc6CBnFAd2Iy7qej8vlH0ZLXJwvD7vR0ux0j7sHvUZhoGzCMJXdGuLdfYldOA==,iv:AHKS9h1EOm/ob5nnT6PZ1sIISLMldUw+8vmavRMJWFU=,tag:/e8TNQUC1boBtuZmLmCMWQ==,type:comment]
+    TRAEFIK_IP: ENC[AES256_GCM,data:/5axwYLpAVoGS8l1n70i,iv:eAOLlKqcUqfZk3QVw9B6MeBbnYy0DQkas63VOyaC92E=,tag:YCg12sedRarZp329dDKVqA==,type:str]
+    #ENC[AES256_GCM,data:hy0fXRw2UaW9BtLrYihPVJtPyRdCPVFPV5edE8h4Xexi,iv:BrNGSapoAlpsl0c0HWGEXmy59CeBlbAYwkrFuKBfzfY=,tag:R6Ah3GkwvnlZzdfxoBCa/w==,type:comment]
+    BLOCKY_IP: ENC[AES256_GCM,data:uXu7gfh7T8zlImvPR4f4,iv:zG++XasbEKhZ9KjpFNxliZEBBPV5znfc9ToG9Gx4x9s=,tag:R22X7w4yq/7iHhT+FKE7Sg==,type:str]
+    #ENC[AES256_GCM,data:WZyMyNTGZca4i+rERe8nZZ/z7m95e7iNYjchL7VK+xx7uEYPf/gPNVRyXCBQQ/ayFmjH8L2YMbhb1iuLNZ/Mw4pgRH1WFs0RXysXBKaTOD8=,iv:2MB09NcNiKTF5usclmH3zoPUEAAiMXPYfJRqbDuzsYk=,tag:87uFeBt60WF0+2L+NK+j1Q==,type:comment]
+    DASHBOARD_IP: ENC[AES256_GCM,data:V+6ppxmZW70rL2R63J+R,iv:2aG41VXHHjqijoMPDQrNW0BCr6bjADKvsZeCQMD6e7c=,tag:l123NuRcV9dTgDmxfEO1mg==,type:str]
+    #ENC[AES256_GCM,data:thCyNvWnRjOXLmkBr1SuQBxAEGXOgYAWfYexzdJsmB7H9XOYUZ4j/KEA0fgSGjDo/uBldSauniUQp1KE85adSatpIuSd0KVhUG5h4GAEX3hLbKjrlnpL,iv:4lfjj1+0dz4ygBXVMcKEaEeAbwg3klk7m3EEm5PSctc=,tag:DTmwn81U9/jphGnbAqPeMw==,type:comment]
+    #ENC[AES256_GCM,data:rUZMfWMTPV1gTAzrld6XAnchzsAoQFTSdd+XoOCvfT43MTJpLDwBQuBQDNp5nUZL7kh1bhKCvA8oYQKvox18c0Up4mWG+/v0crSAGK+kQyMyTwBgHtuwnW4N64SUPNuS3TxbjoF8VCKZ2aBpFBPyIjnUzvHqZ6kjZaFDwg==,iv:Uj68j9ic/0PE5bKrVlg+WuBDyTT91IilvNcyIsfJPIU=,tag:0nkewwEbwnESr1otd1+HEw==,type:comment]
+    #ENC[AES256_GCM,data:xSwwIOiTZ6rTduGkEUO8YELvNUAjjjJXDTK+CdyMCQrsFdNmrbCa0aiyIdxz0+IRkhs3hy0F3dA7R9XDZHWoxYAlUcvFvydUJpNu9dY3O28=,iv:wkECYAaAWqmPafsu6eHADPLJfX/ccoVK26TSfujgnPY=,tag:p5zz35hFAhuB72QfjPw5lg==,type:comment]
+    #ENC[AES256_GCM,data:Qz8KxdSlqvgC5kSCxxBxIje0kgZFZEI2afA4kCEXubhoAM9WvbZKufMZLlUeNDjP+Fv8RI6l,iv:wBcRhy/s6vb59atTR4Kl2dfo+NzjN2q8QoRNNUbNzB4=,tag:IzCWEBIVZG4nmesXlJoulg==,type:comment]
+    DDNS_URL: ENC[AES256_GCM,data:3WMz793QIf9WDS/X9Rg=,iv:LTcTleLAkjBpNraUn7iDHd0cmdUBqYtDLMBd/Q8hW9M=,tag:aSqdE3iSZNYN6Dm6ME3c1A==,type:str]
+    DOMAIN_0: ENC[AES256_GCM,data:WuVhYyoXobnGrkdv,iv:F0Tk6MJH/gqnT9fXPDH6vY2j3jVrg6pcgAk4xJIb01M=,tag:PaFixi5W8Cp2Y8VLd1brkg==,type:str]
+    DOMAIN_0_EMAIL: ENC[AES256_GCM,data:8xPGksg7D8+qaPpuucnXVkc=,iv:yu7oGSoov6xzZohEzDfgBX0Gnw1DwENuW/qpBRu1Mj0=,tag:T9ab6zgFwuHqTUebTkqHKQ==,type:str]
+    #ENC[AES256_GCM,data:BMgIKF2mNBH9E91dC7g6Q8Yp+b2VQVfbqiGlrPM41DVpM07YjJAbLw0OwwZllkJyF47AROlApTYerKRIkr6z63JAaA==,iv:il2NeMtt3kyGEP87pw65hUEIh4/TY8vwjz55y7dUPRY=,tag:m/k/x+BZkWpD6HeHBTDo8A==,type:comment]
+    DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:vSuz8OUIqNUOmQH7l3jDSKSLUx2tVKV8PAegJV6t0mbZ16Cd7A==,iv:PXB02XajIqbxwMDBWeCjTEkBhOYMaYKRfZYY7BL6/Y0=,tag:ktCt53L20aEIAaZjLhQVzw==,type:str]
+    #ENC[AES256_GCM,data:muMdoShwBNL0Wph7ogpb1ssRPGqWJsqVLN4gRepE9lPLx7qR7MtlA4pCRYJcKakbI0mRNzPvwa8=,iv:yYgl5/SSKjcjkH/YVAEiN5en5BrdjHd12YFXPL4mDb0=,tag:QR0mj2nAsOnvtiJmKvbisQ==,type:comment]
+    #ENC[AES256_GCM,data:QMeKkjucXDEsID2V/Tsms14Dod7UeZrfmQ==,iv:k/P0zHkOF5HZ8a4HkHyCVBOLvUTQK+cHc/R2cbe1+oY=,tag:GZsvov3BwrA7J5lIkGbmTQ==,type:comment]
+    #ENC[AES256_GCM,data:4wfIMFSEHtV6J9U+e1CtnMcVd66vdl68MdBYaPXUAhegm3Z7FPvjtshvc8MFj7AtyUOQ6PDR6YIfozspBr9hrt9RCZnq19kJIcZBWM4=,iv:5wmJNjwcDcyk1gq8Prp7KjWZwX007wnTvfyxyDQZ95Q=,tag:czERyNugJmzZ9iE8+we1Jw==,type:comment]
+    GITHUB_REPOSITORY: ENC[AES256_GCM,data:qhEf38z6A1t0KgLbjwoXnxSBsEOj/4F6pMuPY98C1WSv0kCN1UGSZX+RgskFiW69,iv:6fDFKDpuJVztqRAzpx1mNPnXxA32hHmpLVVi8qv1R1c=,tag:7+r2xoNdZyf+lvsORilHiw==,type:str]
+    #ENC[AES256_GCM,data:nemSx9bGVR0Aiz+pSrkMKX9qSms5cGBiZ7yRqoU/HGgpmZNMO6d/Zopw2ni8oOElfROi3qwiFbojS1bOF3Sksy/UJ8VA/ZU=,iv:9V/YiXAbsKBONBpt1CGdldz3gkXeqsUVJmIR3lo8Ml0=,tag:7LoUJ0cVXj1Bwb9/L8KYog==,type:comment]
+    #ENC[AES256_GCM,data:atT/mKtsdBHIA/4UFkVnff6/LN/j2gFmjODKeG8Mq5fy+Wme84YHL+hG/JFHWJnE9ZtzdZAz,iv:vXR4BtWZdNoeB7P7Q7QVdFXOgz7pwEe8Py6uyUWbz58=,tag:CviN8xqRSZ2xJulFFGsgJQ==,type:comment]
+    DOCKERHUB_USER: ENC[AES256_GCM,data:FAvqwtkMKg==,iv:4QkU/Wm80NTaoPFTc5Dg8x1a1M4eyJOl6+rcAQs+kFk=,tag:9p+5mbpa0X3K72tKOtcHoA==,type:str]
+    DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:1N9bY9yzTKRgrZdeX+CmtGXQkyA=,iv:4vN2otc+hSEJRA1VqK2osiVj6G60/HOU+OLTDpKt2aE=,tag:VacwJAcCUMyY46vWXspDIQ==,type:str]
+    #ENC[AES256_GCM,data:3svWp2yokwdWLj8Lxac=,iv:FGxZEdex3KVTB56RJfCrtCckTbHYMZEPZegBC75B6Kc=,tag:NJ0nxVuPeJPMfnmpVgMITw==,type:comment]
+    PODNET: ENC[AES256_GCM,data:AhXeto8cxc36U8/C0w==,iv:3UNzNOKlczRNTX/MNHKMej5fEVPOY1a9HsJ9uepTS5Y=,tag:Sn5jee2FkJr10TtnlHgyzw==,type:str]
+    SVCNET: ENC[AES256_GCM,data:x7VroNTrYxt4Iwc8BQ==,iv:dtS2AVvtTSTPwi1tSlCUmMAdo0DVl54BbpATF55E9so=,tag:LFDd3umoyHpBBjgrTtZ09Q==,type:str]
+    CLUSTERNAME: ENC[AES256_GCM,data:FQlKeQ==,iv:n4+jXD1sHS1hiL1aaWgV7k/Y3qRdBzx2HOf1t+BFQMg=,tag:JvS8Wm4fken0MGvfWH9d5g==,type:str]
 sops:
     shamir_threshold: 3
     kms: []
@@ -51,14 +51,14 @@ sops:
         - recipient: age1xerwm86t75dl2v0sqq5xvzag5q6deawx5en7rqy92886049htaxqagw7yt
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB1azBuQ1hEYVNCczFoaGJj
-            ckM4RklwUGh5aVEycXI4Vi9WSUViRzROYzJZClhtVFdCYy91VVA0dGZYcUx5dStE
-            ZVE3ZzRNU1ZPN2ZKMjkzOS9SSXc0aUEKLS0tIEJFM05KSCt4d2pJazRHYjAwWmd5
-            TndTbU9WdUpveWFaUWp2dzFHdDVkTlUKz4pz8CCMm4RnyUhMpAGiRHRnhjUXMCgU
-            jvTSpFrl2+njNcU9HTv6emajRABSL/CiZ28/GnJEUuYqboCCw5N17g==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBpVW1QcHRtb2U5clV5QVkz
+            NEgrQnJXNnlQTHZGNTkyTWVwdEFNZmU0RDI4CmYxYkk0KzhvU29MVEYzVGl0NGdT
+            MS9DSXhpS3lDVGFsVU5GK1hNM3ZRcUEKLS0tIHpBZERGa3pCTEs0b2tZYlhZMW1F
+            RjdJUDhadzdidlZVT09lOUZyNnJuZEkKpB11hcjZf6fzRWj6t44VfXAVovOC28KZ
+            4jo/xbwXqFZAi7Va08tGUmrscuCjcUv4jkYLGu33nPpFrKdNQzMgAQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-12-30T23:10:35Z"
-    mac: ENC[AES256_GCM,data:cMzaAUzLLt234yR36BP5/oD4j8PYe1eqwce2gLbiAhkitoeeKN/atGLBdQTvA6h0pqA2No72FaCPi+TTvDaOOSbHDWm3fJ1Ozfq6PNwRuIcLJZx1NZ7x9a2/lX3/04AwRLYTtMxRYtgAPMiBGwV96Lh9jKsJrpDpQffrJZz9IkQ=,iv:5V2jMxJ67JKHhkBQwSv2VwUC0vlyynX4lxp1abQoG2I=,tag:QFzFTrdCnAA3XnkOAtJi6w==,type:str]
+    lastmodified: "2025-01-01T18:24:41Z"
+    mac: ENC[AES256_GCM,data:/tlAFIbJYvUgFNtHylHUhqP9eEDGmjcx6NGE/D4+9K47Gq7XAnWnmsP1u7cdHRoyK1/OGf8ie9Sj3/uIaUvXf+z6rHQoVrRCF/XOtoXgPYr27e5IYV4sSAvY7khtBrnmxCJQp15hjflz2WfZhPxf/zlj0bx8kWxIBC1uB/pAOtY=,iv:TfvJgvjWyAxpeIXTc3r9aAumpjq4jJs2UIWOgRdB5Gw=,tag:uV8ZUXVY47O98yuW0INJdA==,type:str]
     pgp: []
     encrypted_regex: ((?i)(displayname|email|pass|ca|id|bootstraptoken|secretboxencryptionsecret|secrets|secrets|password|cert|secret($|[^N])|key|token|^data$|^stringData))
     version: 3.9.1
